tests/blackbox_tests/desktop-entry-with-invalid-encoding.desktop
# E: desktop-entry-with-invalid-encoding-declaration 'UTF-\xbe'

[Desktop Entry]
Type = Application
Name = Gizmo Enhancer
Encoding = UTF-¾
